--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^5.5.2",
     "fs": "0.0.1-security",
     "leaflet": "^1.7.1",
+    "leaflet-modal": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "workbox-cli": "^6.1.1",
@@ -42,8 +43,10 @@
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
     "@ionic/angular-toolkit": "^3.1.0",
+    "@types/bootstrap": "^5.0.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
