--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@swimlane/ngx-datatable": "^19.0.0",
+    "chart.js": "^3.0.2",
     "fs": "0.0.1-security",
     "leaflet": "^1.7.1",
     "leaflet-modal": "^0.2.0",
@@ -44,6 +47,7 @@
     "@angular/language-service": "~11.2.0",
     "@ionic/angular-toolkit": "^3.1.0",
     "@types/bootstrap": "^5.0.12",
+    "@types/chart.js": "^2.9.32",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.5",
