--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/theme/variables.scss","src/global.scss", "node_modules/bootstrap/dist/css/bootstrap.css"],
             "scripts": []
           },
           "configurations": {
@@ -93,7 +93,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": [],
+            "styles": [ "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"],
             "scripts": [],
             "assets": [
               {
