--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~11.2.0",
+    "@angular/cdk": "^11.2.10",
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
+    "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "@swimlane/ngx-datatable": "^19.0.0",
+    "admin-lte": "^3.0.5",
+    "bootstrap": "^4.6.0",
     "chart.js": "^3.0.2",
     "fs": "0.0.1-security",
     "leaflet": "^1.7.1",
