Badge claim feature

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/cdk": "^11.2.10",
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.0",
     "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.2.0",
@@ -36,6 +37,7 @@
     "admin-lte": "^3.0.5",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.0.2",
+    "firebase": "^8.4.3",
     "fs": "0.0.1-security",
     "leaflet": "^1.7.1",
     "leaflet-modal": "^0.2.0",
